# packsim

./: .gitignore  README.md  output.json  packing_example_AB.json  pyproject.toml
src/packsim/: __init__.py  cli.py  extracted_packing.py  hexagonal_prism.py  packing_results.py  packing_simulation.py  particle.py
tests/: test_packsim.py
