[project]
name = "packsim"
version = "0.1.0"
description = "Simulator of the process of packing particles"
readme = "README.md"
authors = [
    { name = "Fábio Pinto Fortkamp", email = "fabio@fabiofortkamp.com" }
]
requires-python = ">=3.11, <3.12"
dependencies = [
    "numpy>=2.3.1",
    "packgen",
]

[project.scripts]
packsim = "packsim:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
packgen = { git = "https://github.com/cmt-dtu-energy/packgen", rev = "v0.3.0" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.ruff.lint]
select = ["I"]

