[project]
name = "packsim"
version = "0.3.0"
description = "Simulator of the process of packing particles"
readme = "README.md"
authors = [{ name = "Fábio Pinto Fortkamp", email = "fabio@fabiofortkamp.com" }]
requires-python = ">=3.11, <3.12"
dependencies = ["numpy>=2.3.1", "packgen", "typer[all]>=0.16.0"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
keywords = ["simulation", "particles", "packing", "hexagon"]

[project.scripts]
packsim = "packsim.cli:app"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
packgen = { git = "https://github.com/cmt-dtu-energy/packgen", rev = "v0.3.0" }

[dependency-groups]
dev = ["pytest>=8.4.1"]

[tool.ruff.lint]
extend-select = ["I", "C"]
